--- a/homework2/firstapp/templates/register.html
+++ b/homework2/firstapp/templates/register.html
@@ -45,7 +45,7 @@
 
                 <h4 class="ui inverted header">
 
-                    <i class="angle left  icon"></i>
+                    <a href="/index" style="color: white;font-size: 25px"><i class="angle left  icon"></i></a>
                 </h4>
 
                 <h1 class="ui inverted center aligned header" style="font-size: 40px;margin-top:55px">
